@@ -1,3 +1,4 @@
+2010-12-17 : when passing character type axes, checking output is suppposed to be character
 2010-12-17 : fixed bug found by Jamie that didn't pass the correct args in get_var_Attribute
 2010-12-16 : added two python test for var with string dimensions
 2010-12-06 : turned off udunits2 warnings when reading database in
